<resources>
    <string name="app_name">B2 HR Etkinlik</string>
    <string name="settings_title">Ayarlar</string>

    <!-- Login Screen Resources -->
    <string name="login_title">Giriş</string>
    <string name="login_usermail">E-Mail Adresinizi Girin</string>
    <string name="login_userpass">Şifrenizi Girin</string>

    <!-- Register Screen Resources -->
    <string name="register_title">Yeni Kayıt</string>
    <string name="register_complete">Kaydı Tamamla</string>
    <string name="register_name">İsim</string>
    <string name="register_surname">Soyisim</string>
    <string name="register_mail">E-Mail Adresi</string>
    <string name="register_password">Şifre</string>
    <string name="register_password2">Şifre Tekrar</string>

    <!-- Main Screen Resources -->
    <string name="main_title">Etkinlikler</string>
    <string name="facebook_app_id">427738737588371</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings Resources -->
    <string name="personal_information">Kişisel Bilgilerim</string>
    <string name="profile_information">Profil Bilgilerim</string>
    <string name="size_information">Boy - Kilo &amp; Ölçü Bilgilerim</string>
    <string name="available_information">Çalışabileceğim Gün &amp; Saatler</string>
    <string name="profile_pictures">Fotoğraflarım</string>
    <string name="cv_files">CV &amp; Dosyalarım</string>
    <string name="job_experience">İş Deneyimlerim</string>
    <string name="new_job_experience">Yeni İş Deneyimi Ekle</string>
    <string name="education_information">Eğitim Bilgilerim</string>
    <string name="new_education_information">Yeni Eğitim Bilgisi Ekle</string>
    <string name="certificate_information">Sertifika &amp; Yabancı Dil Bilgilerim</string>
    <string name="new_certificate_information">Yeni Sertifika &amp; Dil Bilgisi Ekle</string>

    <!-- Settings Profile Resources -->
    <string name="profile_name">İsim</string>
    <string name="profile_surname">Soyisim</string>
    <string name="profile_mail">E-Mail Adresi</string>
    <string name="profile_password">Şifre</string>
    <string name="profile_tcidentity">TC Kimlik No</string>
    <string name="profile_phone">Telefon</string>
    <string name="profile_address">Adres</string>
    <string name="profile_birthdate">Doğum Tarihi</string>
    <string name="profile_birthplace">Doğum Yeri</string>
    <string name="profile_gender">Cinsiyet</string>
    <string name="profile_picture">Resim</string>
    <string name="profile_cv">CV Dosyası</string>
    <string name="profile_driverlicense">Ehliyet Durumu</string>
    <string name="profile_activedriver">Aktif Araç Kullanımı</string>
    
    <string name="profile_height">Boy</string>
    <string name="profile_weight">Kilo</string>
    <string name="profile_haircolor">Saç Rengi</string>
    <string name="profile_eyecolor">Göz Rengi</string>
    <string name="profile_upperbodysize">Üst Beden Ölçüsü</string>
    <string name="profile_lowerbodysize">Alt Beden Ölçüsü</string>
    <string name="profile_chestsize">Göğüs Ölçüsü</string>
    <string name="profile_waistsize">Bel Ölçüsü</string>
    <string name="profile_hipsize">Basen Ölçüsü</string>
    <string name="profile_shoesize">Ayakkabı Numarası</string>
    <string name="profile_jacketsize">Ceket Beden Ölçüsü</string>
    <string name="profile_pantsize">Pantolon Beden Ölçüsü</string>
    <string name="profile_jeansize">Kot Beden Ölçüsü</string>
    <string name="profile_skirtsize">Etek Beden Ölçüsü</string>

</resources>
